second commit - working on products

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,4 +1,8 @@
 @import "../../css-config/mixins.scss";
-.main-home{
-    min-height: 1000px;
+.main-content{
+    width: calc(100% - 20px);
+    margin: 0 auto;
+    @include md{
+        width: 1200px;
+    }
 }
